# textfilter

./: .gitignore  CMakeLists.txt  README.md  vendor.txt
src/: ico.qrc  keyedit.cpp  keyedit.h  keyedit.ui  letter.cpp  letter.h  letter.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/assets/: default.flt
